--- a/Pages/servicioDos.html
+++ b/Pages/servicioDos.html
@@ -126,57 +126,57 @@
         <div class="d-flex flex-column align-items-center mt-5 mb-5">
 
             <div class="zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Fabricación y Montaje de Estructuras Metálicas para Techo que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Fabricación y Montaje de Estructuras Metálicas para Techo que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/servicio-metalicas.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre los servicios en vidriería que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre los servicios en vidriería que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/servicio-vidrieria.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Mantenimiento de Áreas Verdes que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Mantenimiento de Áreas Verdes que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/servicio-jardin.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Arquitectura y Proyectos que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Arquitectura y Proyectos que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/servicio-arquitectura.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre El Mantenimiento para el Hogar que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre El Mantenimiento para el Hogar que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/primerServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el Servicio de Melamine que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el Servicio de Melamine que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/segundoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre El Mantenimiento para el Hogar que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre El Mantenimiento para el Hogar que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/tercerServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Sistema de Cámaras de Seguridad que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Sistema de Cámaras de Seguridad que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/cuartoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad contra Incendios que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad contra Incendios que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/quintoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Serviciode Vidriería que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Serviciode Vidriería que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/sextoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Sistema de Cámaras de Seguridad que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Sistema de Cámaras de Seguridad que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosDos/septimoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
@@ -194,7 +194,7 @@
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
-            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que ofrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
             <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%de%sus%servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%adquirir%un%servicio...!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
@@ -227,7 +227,7 @@
                     <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="me-4 text-reset" target="_blank">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que ofrece en su WebSite!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
