--- a/Pages/servicioTres.html
+++ b/Pages/servicioTres.html
@@ -125,52 +125,52 @@
         <div class="m-0 row justify-content-center mt-5 mb-5">
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Rotomartillo Demoledor que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Rotomartillo Demoledor que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/rotomartillo.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Winche Eléctrico que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Winche Eléctrico que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/winche.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Compresora que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Compresora que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/compresora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Apisonadora que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Apisonadora que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/apisonadora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Vibradora de Concreto que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Vibradora de Concreto que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/vibradora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Maquina Compactadora que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Maquina Compactadora que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/compactadora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Mezcladora de Concreto que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Mezcladora de Concreto que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/mescladora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Escaleras y Andamios Acrow Certificados que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Escaleras y Andamios Acrow Certificados que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/escaleras.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Escaleras de Fibra y Tijera que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Escaleras de Fibra y Tijera que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/escalerasfibra.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Andamios Normados que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Andamios Normados que ofrece en su WebSite!" target="_blank">
                 <img src="../img/servicioTres/andamios.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
@@ -187,7 +187,7 @@
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
-            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que ofrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
             <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%de%sus%servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%adquirir%un%servicio...!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
@@ -221,7 +221,7 @@
                     <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="me-4 text-reset" target="_blank">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que ofrece en su WebSite!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
