--- a/Pages/servicioUno.html
+++ b/Pages/servicioUno.html
@@ -125,17 +125,17 @@
         <div class="d-flex flex-column align-items-center mt-5 mb-5">
 
             <div class="zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad y Salud en el Trabajo que afrece en su WebSite!">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad y Salud en el Trabajo que ofrece en su WebSite!">
                 <img src="../img/serviciosUno/primerServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenDosServicioUno zoom flex-shrink-3">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Asesoría y Elaboración de Expedientes de Defensa Civil que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Asesoría y Elaboración de Expedientes de Defensa Civil que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosUno/segundoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenDosServicioUno zoom flex-shrink-3">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad y Protección contra Incendios que afrece en su WebSite!" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad y Protección contra Incendios que ofrece en su WebSite!" target="_blank">
                 <img src="../img/serviciosUno/novenoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
@@ -152,7 +152,7 @@
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
-            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que ofrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
             <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%de%sus%servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%adquirir%un%servicio...!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
@@ -185,7 +185,7 @@
                     <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="me-4 text-reset" target="_blank">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que ofrece en su WebSite!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
