--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -123,7 +123,7 @@
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
             <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que ofrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%de%sus%servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%adquirir%un%servicio...!" class="fas fa-envelope"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%20de%20sus%20servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20adquirir%20un%20servicio...!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
