--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar barra-navegacion" id="navbarNavDropdown">
 
                 <div class="logo-nabvar">
-                    <a class="navbar-brand" href="inicio.html"> <img src="../img/logo/logosecund.png" alt="logo" width="120px"></a>
+                    <a class="navbar-brand" href="index.html"> <img src="../img/logo/logosecund.png" alt="logo" width="120px"></a>
 
                     <p class="texto-logo-navbar-2">Ingenieria y Servicios Generales</p>
 
@@ -32,7 +32,7 @@
 
                 <ul class="navbar-nav">
                     <li class="nav-item  ">
-                        <a class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Inicio</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -64,7 +64,7 @@
 
     <nav class="navbar navbar-light bg-light navbar-movil">
         <div class="container-fluid">
-            <a class="navbar-brand logo-movil-padre" href="inicio.html">
+            <a class="navbar-brand logo-movil-padre" href="index.html">
                 <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
                 <p class="texto-logo-movil">Ingenieria y Servicios Generales</p>
             </a>
@@ -85,7 +85,7 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a style="color: #013a6a;" class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                            <a style="color: #013a6a;" class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Inicio</a>
                         </li>
     
                         <li class="nav-item dropdown">
