--- a/Pages/servicioTres.html
+++ b/Pages/servicioTres.html
@@ -122,7 +122,7 @@
 
     <div class="container">
 
-        <div class="m-0 row justify-content-center mt-5 mb-5">
+        <div class="m-0 row justify-content-center mb-5">
 
             <div class="col-auto imagenesServicioTres zoom">
                 <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Rotomartillo Demoledor que ofrece en su WebSite!" target="_blank">
