Detalles de Cards

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -222,42 +222,40 @@
         <div class="m-0 row justify-content-center">
             <div class="col-auto text-center m-1" style="margin-bottom: 20px;">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/mantenimiento.jpg" class="card-img-top cards-imagen" alt="...">
+                    <img src="../img/card/extintores.png" class="card-img-top cards-imagen" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title inicio-titulo">Extintores Polvo</h5>
-                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario"
-                            data-bs-target="#botonExtintoresPolvo" style="align-items: center;">Mostrar</button>
+                        <h5 class="card-title inicio-titulo">Extintores contra Incendios</h5>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonExtintoresPolvo" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
             <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/señales.jpg" class="card-img-top cards-imagen" alt="...">
+                    <img src="../img/card/señales.jpg" class="card-img-top cards-imagen"
+                        alt="...">
                     <div class="card-body">
-                        <h5 class="card-title inicio-titulo">Señales Fotoluminiscenses</h5>
-                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario"
-                            data-bs-target="#botonSeñalesFotoluminiscenses"
-                            style="align-items: center;">Mostrar</button>
+                        <h5 class="card-title inicio-titulo">Señales Fotoluminiscentes</h5>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonSeñalesFotoluminiscenses" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
             <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/proteccioncontraincendios.jpg" class="card-img-top cards-imagen" alt="...">
+                    <img src="../img/card/productos-seguridad.PNG" class="card-img-top cards-imagen"
+                        alt="...">
                     <div class="card-body">
                         <h5 class="card-title inicio-titulo">Productos de Emergencia</h5>
-                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario"
-                            data-bs-target="#botonProductosEmergencia" style="align-items: center;">Mostrar</button>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonProductosEmergencia" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
             <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/expediente.jpg" class="card-img-top cards-imagen" alt="...">
+                    <img src="../img/card/sistema-alarmas-incendios.jpg" class="card-img-top cards-imagen"
+                        alt="...">
                     <div class="card-body">
                         <h5 class="card-title inicio-titulo">Kit de Alarmas contra Incendios</h5>
-                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario"
-                            data-bs-target="#botonAlarmasIncendios" style="align-items: center;">Mostrar</button>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonAlarmasIncendios" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
@@ -278,7 +276,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col">
-                            <img src="../img/card/mantenimiento.jpg" class="cards-imagen">
+                            <img src="../img/card/extintores.png" class="cards-imagen">
                         </div>
                         <div class="col">
                             <h4 class="arreglar" style="font-weight: bold;">Extintores Polvo</h4>
@@ -334,7 +332,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto...!"
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar los Extintores...!"
                         type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me
                         interesa!</a>
                 </div>
@@ -394,7 +392,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto...!"
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar las Señales Fotoluminiscenses...!"
                         type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me
                         interesa!</a>
                 </div>
@@ -415,7 +413,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col">
-                            <img src="../img/card/proteccioncontraincendios.jpg" class="cards-imagen">
+                            <img src="../img/card/productos-seguridad.PNG" class="cards-imagen">
                         </div>
                         <div class="col">
                             <h4 class="arreglar" style="font-weight: bold;">Productos de Emergencia</h4>
@@ -504,7 +502,7 @@
                     
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto..!"
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar los Productos de Emergencia...!"
                         type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me
                         interesa!</a>
                 </div>
@@ -525,7 +523,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col">
-                            <img src="../img/card/expediente.jpg" class="cards-imagen">
+                            <img src="../img/card/sistema-alarmas-incendios.jpg" class="cards-imagen">
                         </div>
                         <div class="col">
                             <h4 class="arreglar" style="font-weight: bold;">Kit de Alarmas contra Incendios</h4>
@@ -599,7 +597,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto...!"
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar Kit de Alarmas contra Incendios...!"
                         type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me
                         interesa!</a>
                 </div>
