--- a/Pages/servicioCuatro.html
+++ b/Pages/servicioCuatro.html
@@ -123,25 +123,20 @@
 
     <!-- serviciouno -->
 
-    <h2 class="mt-5 mb-5 titulo-servciouno-movil">Asesorías & Proyectos de Ingeniería - Arquitectura</h2>
+    <h2 class="mt-5 mb-5 titulo-servciouno-movil">Arquitectura y Diseño de Interiores</h2>
 
     <div class="container">
 
         <div class="d-flex flex-column align-items-center mt-5 mb-5">
 
             <div class="zoom">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad y Salud en el Trabajo que ofrece en su WebSite!">
-                <img src="../img/serviciosUno/primerServicio.jpeg" class="imagen-servicio"></a>
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Planos Arquitectónicos que ofrece en su WebSite!">
+                <img src="../img/servicioCuatro/flyer-1.png" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenDosServicioUno zoom flex-shrink-3">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Asesoría y Elaboración de Expedientes de Defensa Civil que ofrece en su WebSite!" target="_blank">
-                <img src="../img/serviciosUno/segundoServicio.jpeg" class="imagen-servicio"></a>
-            </div>
-
-            <div class="imagenDosServicioUno zoom flex-shrink-3">
-                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad y Protección contra Incendios que ofrece en su WebSite!" target="_blank">
-                <img src="../img/serviciosUno/novenoServicio.jpeg" class="imagen-servicio"></a>
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Diseño de Interiores que ofrece en su WebSite!" target="_blank">
+                <img src="../img/servicioCuatro/flyer-2.png" class="imagen-servicio"></a>
             </div>
 
         </div>
