--- a/Pages/servicioDos.html
+++ b/Pages/servicioDos.html
@@ -45,6 +45,9 @@
                           <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioCuatro.html">Arquitectura y Diseño de Interiores</a></li>
+                          
                         </ul>
                       </li>
 
@@ -98,6 +101,8 @@
                               <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                               <li><hr class="dropdown-divider"></li>
                               <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construcción</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioCuatro.html">Arquitectura y Diseño de Interiores</a></li>
                             </ul>
                           </li>
     
@@ -274,6 +279,9 @@
                             </p>
                             <p>
                                 <a href="servicioTres.html" class="text-reset pie-de-pagina">Servicio de Alquileres de Equipos & Herramientas para la Construccion</a>
+                            </p>
+                            <p>
+                                <a href="servicioCuatro.html" class="text-reset pie-de-pagina">Arquitectura y Diseño de Interiores</a>
                             </p>
                         </div>
                         <!-- Grid column -->
