--- a/Pages/index.html
+++ b/Pages/index.html
@@ -56,6 +56,10 @@
                             </li>
                             <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos &
                                     Herramientas para la Construccion</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item item-navbar" href="servicioCuatro.html">Arquitectura y Diseño de Interiores</a></li>
                         </ul>
                     </li>
 
@@ -120,6 +124,10 @@
                                 </li>
                                 <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos
                                         & Herramientas para la Construcción</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item item-navbar" href="servicioCuatro.html">Arquitectura y Diseño de Interiores</a></li>
                             </ul>
                         </li>
 
@@ -168,6 +176,8 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -194,6 +204,14 @@
                         <h3 class="titulo-servicios texto-carrusel">Servicio de Alquileres de Equipos & Herramientas
                             para la Construccion</h3>
                         <a href="servicioTres.html" class="btn btn-primary botonprincipal align-content-center">Ver
+                            más</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/slider/servicio-4.png" class="d-block w-100 tamaño-carrusel" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="titulo-servicios texto-carrusel">Arquitectura y Diseño de Interiores</h3>
+                        <a href="#" class="btn btn-primary botonprincipal align-content-center">Ver
                             más</a>
                     </div>
                 </div>
@@ -758,6 +776,9 @@
                             <p>
                                 <a href="servicioTres.html" class="text-reset pie-de-pagina">Servicio de Alquileres de
                                     Equipos & Herramientas para la Construccion</a>
+                            </p>
+                            <p>
+                                <a href="servicioCuatro.html" class="text-reset pie-de-pagina">Arquitectura y Diseño de Interiores</a>
                             </p>
                         </div>
                         <!-- Grid column -->
