--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -45,6 +45,8 @@
                           <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioCuatro.html">Arquitectura y Diseño de Interiores</a></li>
                         </ul>
                       </li>
 
@@ -98,6 +100,8 @@
                               <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                               <li><hr class="dropdown-divider"></li>
                               <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construcción</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioCuatro.html">Arquitectura y Diseño de Interiores</a></li>
                             </ul>
                           </li>
     
